@@ -2,7 +2,7 @@
 
 <beans>
     <bean id="manager" class="edu.mcw.rgd.gff3.Manager">
-        <property name="version" value="--Gff3 generation pipeline -- build Feb 22, 2024 --" />
+        <property name="version" value="--Gff3 generation pipeline -- build Feb 23, 2024 --" />
 
         <property name="assemblies"><!-- file system location for files for given assembly: must be the same as found in '/ref/fasta' directory -->
             <map>
@@ -318,7 +318,6 @@
             </map>
         </property>
     </bean>
-
 
     <bean id="ensemblPrep" class="edu.mcw.rgd.gff3.EnsemblPrep">
         <property name="outDir" value="data/Ensembl/"/>
