@@ -1,3 +1,6 @@
+Feb 23 2024
+  ensembl-prep: fixed code to handle scaffold-only assemblies
+  
 Feb 22 2024
   ensembl: updated source to build 111
 
